refactor(monorepo): 重构项目结构并优化配置
重构项目结构，将工具配置移至根目录，优化pnpm工作区配置
统一代码风格配置，添加eslint、prettier和stylelint配置
更新README文档，完善项目描述和开发指南
调整前后端应用配置，优化tsconfig和vite配置
移除冗余文件，简化项目依赖结构

--- a/docs/project/数据库设计文档.md
+++ b/docs/project/数据库设计文档.md
@@ -3,14 +3,16 @@
 ## 1. 文档概述
 
 ### 1.1 文档目的
+
 本文档基于CSISP业务需求、总体架构和技术架构文档，设计了一套完整的数据库解决方案。该方案采用PostgreSQL作为数据库，Sequelize作为ORM框架，严格遵循业务流程和技术规范，确保系统的高可用性、可扩展性和安全性。
 
 ### 1.2 技术选型
-| 技术/工具         | 版本  | 用途                          |
-|----------------|-----|-------------------------------|
-| PostgreSQL     | 15  | 关系型数据库                     |
-| Sequelize      | 6.x | ORM框架（Node.js/TypeScript）  |
-| Sequelize CLI  | 6.x | 数据库建模与代码生成工具              |
+
+| 技术/工具     | 版本 | 用途                          |
+| ------------- | ---- | ----------------------------- |
+| PostgreSQL    | 15   | 关系型数据库                  |
+| Sequelize     | 6.x  | ORM框架（Node.js/TypeScript） |
+| Sequelize CLI | 6.x  | 数据库建模与代码生成工具      |
 
 ---
 
@@ -261,6 +263,7 @@ CREATE TABLE IF NOT EXISTS "notification_read" (
 ### 5.1 基本数据操作(CRUD)
 
 #### 5.1.1 插入数据
+
 ```sql
 -- 插入角色
 INSERT INTO "role" ("name", "description") VALUES ('student', '学生角色');
@@ -275,6 +278,7 @@ INSERT INTO "user_role" ("user_id", "role_id") VALUES (1, 2);
 ```
 
 #### 5.1.2 查询数据
+
 ```sql
 -- 查询所有课程
 SELECT * FROM "course";
@@ -290,12 +294,14 @@ WHERE r.name = 'student' AND c.course_id = 1;
 ```
 
 #### 5.1.3 更新数据
+
 ```sql
 -- 更新用户信息
 UPDATE "user" SET "phone" = '13900139000' WHERE "id" = 1;
 ```
 
 #### 5.1.4 删除数据
+
 ```sql
 -- 删除作业
 DELETE FROM "homework" WHERE "id" = 5;
@@ -374,15 +380,18 @@ CREATE INDEX idx_homework_submission_user_id ON "homework_submission"("user_id")
 ## 8. 多用户并发与性能
 
 ### 8.1 并发控制
+
 PostgreSQL采用**MVCC(Multi-Version Concurrency Control)** 实现并发控制，允许：
+
 - 多个用户同时读取数据
 - 写入操作不会阻塞读取操作
 - 读取操作不会阻塞写入操作
 
 ### 8.2 连接池配置(Sequelize)
+
 ```typescript
 // config/database.ts
-import { Sequelize } from 'sequelize';
+import { Sequelize } from 'sequelize'
 
 export const sequelize = new Sequelize(
   process.env.DB_NAME || 'csisp',
@@ -394,15 +403,16 @@ export const sequelize = new Sequelize(
     dialect: 'postgres',
     pool: {
       max: 20, // 最大连接数
-      min: 0,  // 最小连接数
+      min: 0, // 最小连接数
       acquire: 30000, // 连接超时时间(ms)
-      idle: 10000,   // 连接闲置时间(ms)
+      idle: 10000, // 连接闲置时间(ms)
     },
   }
-);
+)
 ```
 
 ### 8.3 性能监控
+
 - 使用PostgreSQL的`pg_stat_statements`插件监控查询性能
 - 定期分析查询计划并优化慢查询
 - 监控连接池使用情况
@@ -412,12 +422,14 @@ export const sequelize = new Sequelize(
 ## 9. ORM建模与代码生成
 
 ### 9.1 Sequelize CLI初始化
+
 ```bash
 # 初始化项目结构
 npx sequelize-cli init
 ```
 
 ### 9.2 生成模型
+
 ```bash
 # 生成User模型
 npx sequelize-cli model:generate --name User --attributes username:string,password:string,real_name:string,email:string,phone:string,status:integer
@@ -427,6 +439,7 @@ npx sequelize-cli model:generate --name Course --attributes course_name:string,c
 ```
 
 ### 9.3 生成迁移脚本
+
 ```bash
 npx sequelize-cli db:migrate
 ```
@@ -435,48 +448,49 @@ npx sequelize-cli db:migrate
 
 ```typescript
 // models/user.ts
-import { DataTypes, Model, Optional } from 'sequelize';
-import { sequelize } from '../config/database';
-import { Role } from './role';
-import { Class } from './class';
-import { AttendanceRecord } from './attendance-record';
-import { HomeworkSubmission } from './homework-submission';
+import { DataTypes, Model, Optional } from 'sequelize'
+import { sequelize } from '../config/database'
+import { Role } from './role'
+import { Class } from './class'
+import { AttendanceRecord } from './attendance-record'
+import { HomeworkSubmission } from './homework-submission'
 
 interface UserAttributes {
-  id: number;
-  username: string;
-  password: string;
-  real_name: string;
-  email: string;
-  phone: string;
-  status?: number;
-  createdAt?: Date;
-  updatedAt?: Date;
+  id: number
+  username: string
+  password: string
+  real_name: string
+  email: string
+  phone: string
+  status?: number
+  createdAt?: Date
+  updatedAt?: Date
 }
 
-interface UserCreationAttributes extends Optional<UserAttributes, 'id' | 'status' | 'createdAt' | 'updatedAt'> {}
+interface UserCreationAttributes
+  extends Optional<UserAttributes, 'id' | 'status' | 'createdAt' | 'updatedAt'> {}
 
 export class User extends Model<UserAttributes, UserCreationAttributes> implements UserAttributes {
-  public id!: number;
-  public username!: string;
-  public password!: string;
-  public real_name!: string;
-  public email!: string;
-  public phone!: string;
-  public status!: number;
+  public id!: number
+  public username!: string
+  public password!: string
+  public real_name!: string
+  public email!: string
+  public phone!: string
+  public status!: number
 
-  public readonly createdAt!: Date;
-  public readonly updatedAt!: Date;
+  public readonly createdAt!: Date
+  public readonly updatedAt!: Date
 
   // 关联定义
   public static associate(models: any) {
-    User.belongsToMany(models.Role, { through: 'user_role' });
-    User.belongsToMany(models.Class, { through: 'user_class' });
-    User.hasMany(models.AttendanceRecord);
-    User.hasMany(models.HomeworkSubmission);
-    User.hasMany(models.Notification, { as: 'Sender' });
-    User.belongsToMany(models.Notification, { through: 'notification_read' });
-    User.belongsToMany(models.Course, { through: 'course_rep' });
+    User.belongsToMany(models.Role, { through: 'user_role' })
+    User.belongsToMany(models.Class, { through: 'user_class' })
+    User.hasMany(models.AttendanceRecord)
+    User.hasMany(models.HomeworkSubmission)
+    User.hasMany(models.Notification, { as: 'Sender' })
+    User.belongsToMany(models.Notification, { through: 'notification_read' })
+    User.belongsToMany(models.Course, { through: 'course_rep' })
   }
 }
 
@@ -522,7 +536,7 @@ User.init(
     createdAt: 'created_at',
     updatedAt: 'updated_at',
   }
-);
+)
 ```
 
 ---
