feat(backend): 添加Swagger API文档支持
- 为所有控制器添加Swagger注释
- 配置Swagger UI和OpenAPI规范
- 更新日志中间件格式
- 添加相关依赖包
- 完善README文档结构

--- a/docs/src/backend/后端设计文档.md
+++ b/docs/src/backend/后端设计文档.md
@@ -2041,6 +2041,7 @@ sequenceDiagram
   API-->>Client: 200 JSON（含树状时间段）
 ```
 
+```sql
 -- 子课程表（课程的开课单元，与时间段形成树）
 CREATE TABLE "sub_course" (
 id SERIAL PRIMARY KEY,
@@ -2077,3 +2078,4 @@ upload_time TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
 created_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
 updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
 );
+```
