feat: 实现数据库模块重构与功能增强
refactor(backend): 重构数据库模块结构，新增 models 加载与关联配置
feat(backend): 添加数据库健康检查端点与错误处理增强
docs: 更新数据库设计文档与类型兼容性报告
fix(backend): 修复考勤服务字段映射问题
feat(frontend): 新增仪表盘与通知模块API
style: 统一前后端代码格式与错误处理
chore: 更新项目文档结构与导航配置

--- a/docs/src/architecture/技术架构设计文档.md
+++ b/docs/src/architecture/技术架构设计文档.md
@@ -395,21 +395,45 @@ sequenceDiagram
   participant Dev as Developer
   participant App as apps/backend/app.ts
   participant Init as src/initControllers.ts
-  participant Models as sequelize/models/index.ts
+  participant DB as src/databases/index.ts
   participant Factory as ServiceFactory
   participant Router as RouterConfig
 
   Dev->>App: pnpm dev
   App->>Init: initializeControllers()
-  Init->>Models: await modelsReady
-  Models-->>Init: models + associations ready
+  Init->>DB: await modelsReady
+  DB-->>Init: models + associations ready
   Init->>Factory: registerModels(models)
   Factory-->>Init: services constructed
   Init-->>App: RouterConfig
   App->>Router: getRouter() 挂载 /api
-  App->>App: use(error, defaultCors, logger, rateLimit, bodyParser)
+  App->>App: use(error, cors, logger, rateLimit, bodyParser)
   App->>App: listen(PORT)
 ```
+
+## 🔗 数据链路说明（请求 → 响应）
+
+```mermaid
+flowchart LR
+  Client --> Koa[中间件栈\nerror/cors/logger/rateLimit/bodyParser/auth]
+  Koa --> Router[RouterConfig 路由]
+  Router --> Ctrl[Controller 参数校验]
+  Ctrl --> Svc[Service 业务逻辑]
+  Svc --> ORM[Sequelize Model]
+  ORM --> PG[(PostgreSQL)]
+  PG --> ORM
+  ORM --> Svc
+  Svc --> Ctrl
+  Ctrl --> Koa
+  Koa --> Client
+```
+
+### 运行时数据库装配
+
+- 单一连接源：`apps/backend/src/database.ts` 创建 `sequelize`（连接池/日志/benchmark）
+- 模型加载：`apps/backend/src/databases/loaders/loadModels.ts` 动态导入 `apps/backend/sequelize/models/*.ts` 工厂并实例化
+- 关联建立：`apps/backend/src/databases/loaders/setupAssociations.ts` 执行每个模型的 `associate(models)`
+- 导出入口：`apps/backend/src/databases/index.ts` 暴露 `models/modelsReady/sequelize`，供 `initializeControllers` 装配
 
 ### 3. 前端核心配置
 
