--- a/docs/src/backend/后端设计文档.md
+++ b/docs/src/backend/后端设计文档.md
@@ -120,6 +120,44 @@ graph TB
 - **Redis**：缓存热点数据，提高系统性能
 - **文件存储**：作业文件等非结构化数据存储
 
+#### 2.2.5 运行时数据库装配与数据链路
+
+- 运行时装配入口：`apps/backend/src/databases/index.ts`
+- 连接来源：`apps/backend/src/database.ts:26-33` 提供单一 `sequelize` 实例与 `pool/logging/benchmark`
+- 模型来源：动态加载 `apps/backend/sequelize/models/*.ts` 工厂（不复制模型），再执行各模型的 `associate(models)`
+- 控制器装配：`apps/backend/src/initControllers.ts:25-31` 等待 `modelsReady` 后注册到 `ServiceFactory`
+- 服务层使用：`apps/backend/src/services/BaseService.ts:19,62,91,120` 统一 CRUD；具体业务如 `apps/backend/src/services/UserService.ts` 进行字段映射与关联查询
+
+```mermaid
+sequenceDiagram
+  participant App as app.ts
+  participant Boot as initializeControllers()
+  participant DB as src/databases/index.ts
+  participant Loader as loadModels()
+  participant Assoc as setupAssociations()
+  participant Factory as ServiceFactory
+  participant Ctrl as Controllers
+  participant Svc as Services
+  participant ORM as Sequelize Models
+  participant PG as PostgreSQL
+
+  App->>Boot: initializeControllers()
+  Boot->>DB: import models, modelsReady
+  DB->>Loader: loadModels(sequelize)
+  Loader-->>DB: Models(static)
+  DB->>Assoc: associate(models)
+  Assoc-->>DB: Models(ready)
+  Boot->>Factory: registerModels(models)
+  Factory-->>Ctrl: construct controllers
+  Ctrl->>Svc: call service methods
+  Svc->>ORM: create/find/update/destroy
+  ORM-->>PG: SQL
+  PG-->>ORM: rows/result
+  ORM-->>Svc: instances/data
+  Svc-->>Ctrl: ApiResponse
+  Ctrl-->>App: Router response
+```
+
 ---
 
 ## 3. 模块划分与职责
@@ -334,13 +372,13 @@ interface AttendanceService {
 }
 ```
 
-#### 3.3.3 数据库表设计
+#### 3.3.3 数据库表设计（已按课程维度对齐）
 
 ```sql
--- 考勤任务表
+-- 考勤任务表（按课程维度发布任务）
 CREATE TABLE "attendance_task" (
     id SERIAL PRIMARY KEY,
-    class_id INT NOT NULL REFERENCES "class"(id) ON DELETE CASCADE,
+    course_id INT NOT NULL REFERENCES "course"(id) ON DELETE CASCADE,
     start_time TIMESTAMP WITH TIME ZONE NOT NULL,
     end_time TIMESTAMP WITH TIME ZONE NOT NULL CHECK (end_time > start_time),
     status INT DEFAULT 1,
@@ -348,10 +386,10 @@ CREATE TABLE "attendance_task" (
     updated_at TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
 );
 
--- 考勤记录表
+-- 考勤记录表（按任务+用户唯一）
 CREATE TABLE "attendance_record" (
     id SERIAL PRIMARY KEY,
-    attendance_task_id INT NOT NULL REFERENCES "attendance_task"(id) ON DELETE CASCADE,
+    task_id INT NOT NULL REFERENCES "attendance_task"(id) ON DELETE CASCADE,
     user_id INT NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
     checkin_time TIMESTAMP WITH TIME ZONE NOT NULL,
     status VARCHAR(50) NOT NULL DEFAULT 'present',
@@ -878,6 +916,39 @@ const getCourseWithDetails = async (courseId: number): Promise<any> => {
   });
 };
 ```
+
+### 5.3 类型来源与字段映射
+
+- 领域类型来源：`packages/types/src/index.ts:4-22`
+- ORM 细化类型：`apps/backend/src/types/models.ts:403-428` 定义 `Models/DatabaseInstance` 及各 `Attributes/CreationAttributes`
+- 服务层映射示例：
+  - 写入用户：`apps/backend/src/services/UserService.ts:52-61` 使用 `student_id ← studentId`、`real_name ← realName`、`enrollment_year ← enrollmentYear`
+  - 统计查询：`apps/backend/src/services/UserService.ts:299-305` 按 `enrollment_year` 分组
+
+```mermaid
+flowchart TD
+  A[Request DTO (@csisp/types)] --> B[Controller 参数校验]
+  B --> C[Service 字段映射 camelCase→snake_case]
+  C --> D[Sequelize Model 层]
+  D --> E[(PostgreSQL 表)]
+  E --> F[Model 实例]
+  F --> G[Service 组装响应]
+  G --> H[Controller 返回 ApiResponse]
+```
+
+### 5.4 启动命令与中间件链路
+
+- 启动命令
+  - 根目录：`pnpm --filter backend dev`
+  - 后端目录：`pnpm dev`（`apps/backend/package.json:7`）
+- 中间件链路（按注册顺序）
+  - `error`：统一异常捕获与响应
+  - `cors`：跨域策略
+  - `logger`：请求日志
+  - `rateLimit`：限流防护
+  - `bodyParser`：解析 JSON/表单
+  - `auth`：JWT 校验与 `ctx.state.user`
+  - `router`：`RouterConfig.getRouter()` 挂载 `/api`
 
 #### 5.2.2 额外功能实现
 
@@ -1803,11 +1874,11 @@ const logger = winston.createLogger({
 });
 ```
 
-#### 9.2.2 健康检查端点
+#### 9.2.2 健康检查端点（对齐当前路由前缀）
 
 ```typescript
-// 健康检查接口
-router.get('/health', async ctx => {
+// 健康检查接口（应用运行态）
+router.get('/api/health', async ctx => {
   // 检查数据库连接
   try {
     await sequelize.authenticate();
@@ -1829,8 +1900,20 @@ router.get('/health', async ctx => {
   }
 });
 
+// 数据库健康接口（直连校验）
+router.get('/api/db/health', async ctx => {
+  try {
+    await sequelize.authenticate();
+    ctx.status = 200;
+    ctx.body = { code: 200, message: '数据库连接正常' };
+  } catch (e: any) {
+    ctx.status = 503;
+    ctx.body = { code: 503, message: '数据库连接失败', error: e?.message };
+  }
+});
+
 // 就绪检查接口
-router.get('/ready', async ctx => {
+router.get('/api/ready', async ctx => {
   // 检查服务是否就绪
   const checks = await Promise.allSettled([checkDatabase(), checkRedis(), checkExternalServices()]);
 
@@ -1967,17 +2050,17 @@ spec:
 ```mermaid
 sequenceDiagram
   participant App as app.ts
-  participant Models as sequelize/models/index.ts
+  participant DB as src/databases/index.ts
   participant Factory as ServiceFactory
   participant Router as RouterConfig
 
-  App->>Models: import models, modelsReady
-  App->>Models: await modelsReady (加载模型 + 执行associate)
+  App->>DB: import models, modelsReady
+  App->>DB: await modelsReady (加载模型 + 执行associate)
   App->>Factory: registerModels(models)
   Factory->>Factory: 构造服务实例（User/Course/Attendance/Homework）
   App->>Router: new RouterConfig(controllers)
   Router->>App: getRouter() 返回 /api 路由
-  App->>App: 挂载中间件（error/cors/logger/rateLimit/bodyParser）
+  App->>App: 挂载中间件（error/cors/logger/rateLimit/bodyParser/auth）
   App->>App: 挂载 /api 路由后启动 listen(PORT)
 ```
 
@@ -2008,7 +2091,7 @@ flowchart TD
 flowchart TD
   A[学生发起打卡] --> B[jwtAuth 获取 userId]
   B --> C[校验 taskId/status/remark]
-  C --> D[写入 AttendanceRecord(attendance_task_id,user_id)]
+  C --> D[写入 AttendanceRecord(task_id,user_id)]
   D --> E{状态统计}
   E --> F[normal/late/absent/leave 聚合]
   F --> G[返回 ApiResponse]
