--- a/docs/src/backend/后端项目初始化指南.md
+++ b/docs/src/backend/后端项目初始化指南.md
@@ -1347,9 +1347,9 @@ fi
 # 启动服务
 pnpm dev &
 
-# 等待服务启动
+# 等待服务启动（按当前路由前缀）
 for i in {1..30}; do
-    if curl -s http://localhost:$PORT/health >/dev/null 2>&1; then
+    if curl -s http://localhost:$PORT/api/health >/dev/null 2>&1; then
         log_success "后端服务启动成功！"
         break
     fi
@@ -1420,3 +1420,39 @@ teacherId: selectedTeacher.dataValues.id,
 脚本的每个环节都经过精心设计，旨在提供一个可靠、一致的开发环境配置流程，使开发者能够轻松地在不同操作系统上设置相同的开发环境。
 
 如需修改脚本或理解某个具体环节，请参考本文档的详细说明，确保对整个系统有全面的认识。在修改脚本时，请确保同时更新所有三个平台的版本，以保持功能一致性。
+
+## 14. 后端启动与接口验证（新增）
+
+### 14.1 启动命令
+
+```
+pnpm dev:backend      # 在项目根目录运行
+cd apps/backend && pnpm dev  # 在后端目录运行
+```
+
+### 14.2 健康检查接口
+
+```
+curl -s http://localhost:3000/api/health        # 应用健康
+curl -s http://localhost:3000/api/db/health     # 数据库健康
+```
+
+### 14.3 请求处理流程（Mermaid）
+
+```mermaid
+flowchart TD
+  A[客户端请求 /api/*] --> B[errorHandler]
+  B --> C[cors]
+  C --> D[logger]
+  D --> E[rateLimit]
+  E --> F[bodyParser]
+  F --> G[jwtAuth]
+  G --> H[RouterConfig /api]
+  H --> I[Controller]
+  I --> J[Service 字段映射]
+  J --> K[Sequelize Models]
+  K --> L[(PostgreSQL)]
+  L --> M[返回 rows]
+  M --> N[Service 组装 ApiResponse]
+  N --> O[Controller 返回]
+```
