--- a/docs/src/database/数据库设计文档.md
+++ b/docs/src/database/数据库设计文档.md
@@ -76,7 +76,7 @@ erDiagram
     COURSE }|--|| ACADEMIC_CONFIG : "遵循学期配置"
 
     COURSE ||--o{ CLASSES : "包含班级"
-    SUB_COURSE ||--o{ TIME_SLOT : "有时间安排"
+    COURSE ||--o{ TIME_SLOT : "有时间安排"
     COURSE ||--o{ ATTENDANCE_TASK : "发布考勤任务"
     ATTENDANCE_TASK ||--o{ ATTENDANCE_RECORD : "包含考勤记录"
     USER ||--o{ ATTENDANCE_RECORD : "有考勤记录"
@@ -120,8 +120,8 @@ erDiagram
     }
     TIME_SLOT {
         int id PK
-        int sub_course_id
-        int weekday
+        int course_id
+        int week_day
         string start_time
         string end_time
         string location
@@ -237,22 +237,11 @@ CREATE TABLE IF NOT EXISTS "course_rep" (
     PRIMARY KEY ("user_id", "course_id")
 );
 
--- 创建时间槽表
-CREATE TABLE IF NOT EXISTS "sub_course" (
-    "id" SERIAL PRIMARY KEY,
-    "course_id" INT NOT NULL REFERENCES "course"("id") ON DELETE CASCADE,
-    "sub_course_code" VARCHAR(50) UNIQUE NOT NULL,
-    "teacher_id" INT REFERENCES "teacher"("id") ON DELETE SET NULL,
-    "academic_year" INT NOT NULL,
-    "status" INT DEFAULT 1,
-    "created_at" TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP,
-    "updated_at" TIMESTAMP WITH TIME ZONE DEFAULT CURRENT_TIMESTAMP
-);
-
+-- 创建时间槽表（按课程维度）
 CREATE TABLE IF NOT EXISTS "time_slot" (
     "id" SERIAL PRIMARY KEY,
-    "sub_course_id" INT NOT NULL REFERENCES "sub_course"("id") ON DELETE CASCADE,
-    "weekday" INT NOT NULL CHECK ("weekday" BETWEEN 1 AND 7),
+    "course_id" INT NOT NULL REFERENCES "course"("id") ON DELETE CASCADE,
+    "week_day" INT NOT NULL CHECK ("week_day" BETWEEN 1 AND 7),
     "start_time" VARCHAR(20) NOT NULL,
     "end_time" VARCHAR(20) NOT NULL,
     "location" VARCHAR(255) NOT NULL,
@@ -264,7 +253,7 @@ CREATE TABLE IF NOT EXISTS "time_slot" (
 -- 创建考勤任务表
 CREATE TABLE IF NOT EXISTS "attendance_task" (
     "id" SERIAL PRIMARY KEY,
-    "class_id" INT NOT NULL REFERENCES "class"("id") ON DELETE CASCADE,
+    "course_id" INT NOT NULL REFERENCES "course"("id") ON DELETE CASCADE,
     "start_time" TIMESTAMP WITH TIME ZONE NOT NULL,
     "end_time" TIMESTAMP WITH TIME ZONE NOT NULL CHECK ("end_time" > "start_time"),
     "status" INT DEFAULT 1,
@@ -275,7 +264,7 @@ CREATE TABLE IF NOT EXISTS "attendance_task" (
 -- 创建考勤记录表
 CREATE TABLE IF NOT EXISTS "attendance_record" (
     "id" SERIAL PRIMARY KEY,
-    "attendance_task_id" INT NOT NULL REFERENCES "attendance_task"("id") ON DELETE CASCADE,
+    "task_id" INT NOT NULL REFERENCES "attendance_task"("id") ON DELETE CASCADE,
     "user_id" INT NOT NULL REFERENCES "user"("id") ON DELETE CASCADE,
     "checkin_time" TIMESTAMP WITH TIME ZONE NOT NULL,
     "status" VARCHAR(50) NOT NULL DEFAULT 'present',
@@ -727,8 +716,10 @@ interface UserAttributes {
   updatedAt?: Date;
 }
 
-interface UserCreationAttributes
-  extends Optional<UserAttributes, 'id' | 'status' | 'createdAt' | 'updatedAt'> {}
+interface UserCreationAttributes extends Optional<
+  UserAttributes,
+  'id' | 'status' | 'createdAt' | 'updatedAt'
+> {}
 
 export class User extends Model<UserAttributes, UserCreationAttributes> implements UserAttributes {
   public id!: number;
