--- a/docs/src/database/数据模型类型说明文档.md
+++ b/docs/src/database/数据模型类型说明文档.md
@@ -52,10 +52,9 @@ export interface User {
 export interface CreateUserInput extends Omit<User, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新用户时的输入类型（不含自动生成的字段和不可更新字段）
-export interface UpdateUserInput
-  extends Partial<
-    Omit<User, 'id' | 'username' | 'studentId' | 'enrollmentYear' | 'createdAt' | 'updatedAt'>
-  > {}
+export interface UpdateUserInput extends Partial<
+  Omit<User, 'id' | 'username' | 'studentId' | 'enrollmentYear' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 3. 课程模型 (Course)
@@ -84,10 +83,9 @@ export interface CourseUniqueConstraint {
 export interface CreateCourseInput extends Omit<Course, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新课程时的输入类型
-export interface UpdateCourseInput
-  extends Partial<
-    Omit<Course, 'id' | 'courseCode' | 'semester' | 'academicYear' | 'createdAt' | 'updatedAt'>
-  > {}
+export interface UpdateCourseInput extends Partial<
+  Omit<Course, 'id' | 'courseCode' | 'semester' | 'academicYear' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 4. 教师模型 (Teacher)
@@ -111,8 +109,9 @@ export interface Teacher {
 export interface CreateTeacherInput extends Omit<Teacher, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新教师时的输入类型
-export interface UpdateTeacherInput
-  extends Partial<Omit<Teacher, 'id' | 'userId' | 'teacherId' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdateTeacherInput extends Partial<
+  Omit<Teacher, 'id' | 'userId' | 'teacherId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 5. 班级模型 (Class)
@@ -137,13 +136,12 @@ export interface Class {
 export interface CreateClassInput extends Omit<Class, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新班级时的输入类型
-export interface UpdateClassInput
-  extends Partial<
-    Omit<
-      Class,
-      'id' | 'courseId' | 'teacherId' | 'semester' | 'academicYear' | 'createdAt' | 'updatedAt'
-    >
-  > {}
+export interface UpdateClassInput extends Partial<
+  Omit<
+    Class,
+    'id' | 'courseId' | 'teacherId' | 'semester' | 'academicYear' | 'createdAt' | 'updatedAt'
+  >
+> {}
 ```
 
 ## 6. 用户班级关联模型 (UserClass)
@@ -169,8 +167,9 @@ export interface UserClassUniqueConstraint {
 export interface CreateUserClassInput extends Omit<UserClass, 'id' | 'joinTime'> {}
 
 // 更新关联时的输入类型
-export interface UpdateUserClassInput
-  extends Partial<Omit<UserClass, 'id' | 'userId' | 'classId' | 'joinTime'>> {}
+export interface UpdateUserClassInput extends Partial<
+  Omit<UserClass, 'id' | 'userId' | 'classId' | 'joinTime'>
+> {}
 ```
 
 ## 7. 子课程模型 (SubCourse)
@@ -193,10 +192,9 @@ export interface SubCourse {
 export interface CreateSubCourseInput extends Omit<SubCourse, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新子课程时的输入类型
-export interface UpdateSubCourseInput
-  extends Partial<
-    Omit<SubCourse, 'id' | 'courseId' | 'subCourseCode' | 'createdAt' | 'updatedAt'>
-  > {}
+export interface UpdateSubCourseInput extends Partial<
+  Omit<SubCourse, 'id' | 'courseId' | 'subCourseCode' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 8. 课代表模型 (CourseRep)
@@ -216,14 +214,15 @@ export interface CourseRep {
 }
 
 // 创建课代表时的输入类型
-export interface CreateCourseRepInput
-  extends Omit<CourseRep, 'id' | 'appointmentDate' | 'createdAt' | 'updatedAt'> {}
+export interface CreateCourseRepInput extends Omit<
+  CourseRep,
+  'id' | 'appointmentDate' | 'createdAt' | 'updatedAt'
+> {}
 
 // 更新课代表时的输入类型
-export interface UpdateCourseRepInput
-  extends Partial<
-    Omit<CourseRep, 'id' | 'userId' | 'classId' | 'appointmentDate' | 'createdAt' | 'updatedAt'>
-  > {}
+export interface UpdateCourseRepInput extends Partial<
+  Omit<CourseRep, 'id' | 'userId' | 'classId' | 'appointmentDate' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 9. 时间段模型 (TimeSlot)
@@ -247,8 +246,9 @@ export interface TimeSlot {
 export interface CreateTimeSlotInput extends Omit<TimeSlot, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新时间段时的输入类型
-export interface UpdateTimeSlotInput
-  extends Partial<Omit<TimeSlot, 'id' | 'subCourseId' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdateTimeSlotInput extends Partial<
+  Omit<TimeSlot, 'id' | 'subCourseId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 10. 学术配置模型 (AcademicConfig)
@@ -264,12 +264,15 @@ export interface AcademicConfig {
 }
 
 // 创建配置时的输入类型
-export interface CreateAcademicConfigInput
-  extends Omit<AcademicConfig, 'id' | 'createdAt' | 'updatedAt'> {}
+export interface CreateAcademicConfigInput extends Omit<
+  AcademicConfig,
+  'id' | 'createdAt' | 'updatedAt'
+> {}
 
 // 更新配置时的输入类型
-export interface UpdateAcademicConfigInput
-  extends Partial<Omit<AcademicConfig, 'id' | 'configKey' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdateAcademicConfigInput extends Partial<
+  Omit<AcademicConfig, 'id' | 'configKey' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 11. 考勤任务模型 (AttendanceTask)
@@ -288,12 +291,15 @@ export interface AttendanceTask {
 }
 
 // 创建考勤任务时的输入类型
-export interface CreateAttendanceTaskInput
-  extends Omit<AttendanceTask, 'id' | 'createdAt' | 'updatedAt'> {}
+export interface CreateAttendanceTaskInput extends Omit<
+  AttendanceTask,
+  'id' | 'createdAt' | 'updatedAt'
+> {}
 
 // 更新考勤任务时的输入类型
-export interface UpdateAttendanceTaskInput
-  extends Partial<Omit<AttendanceTask, 'id' | 'classId' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdateAttendanceTaskInput extends Partial<
+  Omit<AttendanceTask, 'id' | 'classId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 12. 考勤记录模型 (AttendanceRecord)
@@ -310,14 +316,15 @@ export interface AttendanceRecord {
 }
 
 // 创建考勤记录时的输入类型
-export interface CreateAttendanceRecordInput
-  extends Omit<AttendanceRecord, 'id' | 'createdAt' | 'updatedAt'> {}
+export interface CreateAttendanceRecordInput extends Omit<
+  AttendanceRecord,
+  'id' | 'createdAt' | 'updatedAt'
+> {}
 
 // 更新考勤记录时的输入类型
-export interface UpdateAttendanceRecordInput
-  extends Partial<
-    Omit<AttendanceRecord, 'id' | 'attendanceTaskId' | 'userId' | 'createdAt' | 'updatedAt'>
-  > {}
+export interface UpdateAttendanceRecordInput extends Partial<
+  Omit<AttendanceRecord, 'id' | 'attendanceTaskId' | 'userId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 13. 作业模型 (Homework)
@@ -338,8 +345,9 @@ export interface Homework {
 export interface CreateHomeworkInput extends Omit<Homework, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新作业时的输入类型
-export interface UpdateHomeworkInput
-  extends Partial<Omit<Homework, 'id' | 'classId' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdateHomeworkInput extends Partial<
+  Omit<Homework, 'id' | 'classId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 14. 作业提交模型 (HomeworkSubmission)
@@ -372,14 +380,15 @@ export interface HomeworkFile {
 }
 
 // 创建作业提交时的输入类型
-export interface CreateHomeworkSubmissionInput
-  extends Omit<HomeworkSubmission, 'id' | 'score' | 'feedback' | 'createdAt' | 'updatedAt'> {}
+export interface CreateHomeworkSubmissionInput extends Omit<
+  HomeworkSubmission,
+  'id' | 'score' | 'feedback' | 'createdAt' | 'updatedAt'
+> {}
 
 // 更新作业提交时的输入类型
-export interface UpdateHomeworkSubmissionInput
-  extends Partial<
-    Omit<HomeworkSubmission, 'id' | 'homeworkId' | 'userId' | 'createdAt' | 'updatedAt'>
-  > {}
+export interface UpdateHomeworkSubmissionInput extends Partial<
+  Omit<HomeworkSubmission, 'id' | 'homeworkId' | 'userId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 15. 通知模型 (Notification)
@@ -398,14 +407,15 @@ export interface Notification {
 }
 
 // 创建通知时的输入类型
-export interface CreateNotificationInput
-  extends Omit<Notification, 'id' | 'read' | 'createdAt' | 'updatedAt'> {}
+export interface CreateNotificationInput extends Omit<
+  Notification,
+  'id' | 'read' | 'createdAt' | 'updatedAt'
+> {}
 
 // 更新通知时的输入类型
-export interface UpdateNotificationInput
-  extends Partial<
-    Omit<Notification, 'id' | 'senderId' | 'receiverId' | 'createdAt' | 'updatedAt'>
-  > {}
+export interface UpdateNotificationInput extends Partial<
+  Omit<Notification, 'id' | 'senderId' | 'receiverId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 16. 权限模型 (Permission)
@@ -425,8 +435,9 @@ export interface Permission {
 export interface CreatePermissionInput extends Omit<Permission, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新权限时的输入类型
-export interface UpdatePermissionInput
-  extends Partial<Omit<Permission, 'id' | 'code' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdatePermissionInput extends Partial<
+  Omit<Permission, 'id' | 'code' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 17. 角色模型 (Role)
@@ -446,8 +457,9 @@ export interface Role {
 export interface CreateRoleInput extends Omit<Role, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新角色时的输入类型
-export interface UpdateRoleInput
-  extends Partial<Omit<Role, 'id' | 'code' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdateRoleInput extends Partial<
+  Omit<Role, 'id' | 'code' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 18. 课程表模型 (Schedule)
@@ -471,8 +483,9 @@ export interface Schedule {
 export interface CreateScheduleInput extends Omit<Schedule, 'id' | 'createdAt' | 'updatedAt'> {}
 
 // 更新课程表时的输入类型
-export interface UpdateScheduleInput
-  extends Partial<Omit<Schedule, 'id' | 'userId' | 'createdAt' | 'updatedAt'>> {}
+export interface UpdateScheduleInput extends Partial<
+  Omit<Schedule, 'id' | 'userId' | 'createdAt' | 'updatedAt'>
+> {}
 ```
 
 ## 19. 数据生成规则
