feat: 实现仪表盘功能与系统管理模块
refactor(backend): 重构认证中间件与用户服务逻辑
feat(backend): 新增DashboardController与DashboardService
feat(frontend): 添加系统管理、个人中心与修改密码页面
fix(frontend): 修复表格分页与搜索组件问题
docs: 更新前后端接口文档与设计规范

--- a/docs/src/frontend/前端中台设计文档.md
+++ b/docs/src/frontend/前端中台设计文档.md
@@ -105,18 +105,18 @@ graph TB
 
 ### 3.1 核心技术栈
 
-| 技术类别       | 技术选型        | 版本   | 选型理由                              |
-| -------------- | --------------- | ------ | ------------------------------------- |
-| **前端框架**   | Vue 3           | 3.4.x  | 响应式系统、Composition API、性能优异 |
-| **构建工具**   | Vite            | 5.0.x  | 快速构建、热更新、TypeScript原生支持  |
-| **编程语言**   | TypeScript      | 5.2.x  | 类型安全、代码可维护性、IDE支持       |
-| **UI组件库**   | Naive-UI        | 2.38.x | 现代化设计、完整组件、Vue 3生态       |
-| **状态管理**   | Pinia           | 2.1.x  | Vue官方推荐、TypeScript友好、轻量级   |
-| **路由管理**   | Vue Router      | 4.3.x  | Vue生态官方路由、支持History模式      |
-| **HTTP客户端** | Axios           | 1.6.x  | 功能完善、拦截器支持、浏览器兼容性好  |
-| **样式方案**   | Sass + Tailwind | 最新   | 预处理能力强、原子化CSS、响应式设计   |
-| **图表库**     | ECharts         | 5.5.x  | 功能强大、配置灵活、数据可视化能力    |
-| **图标库**     | Lucide React    | 最新   | 图标丰富、可定制性强、现代设计风格    |
+| 技术类别       | 技术选型          | 版本   | 选型理由                              |
+| -------------- | ----------------- | ------ | ------------------------------------- |
+| **前端框架**   | Vue 3             | 3.4.x  | 响应式系统、Composition API、性能优异 |
+| **构建工具**   | Vite              | 5.0.x  | 快速构建、热更新、TypeScript原生支持  |
+| **编程语言**   | TypeScript        | 5.2.x  | 类型安全、代码可维护性、IDE支持       |
+| **UI组件库**   | Naive-UI          | 2.38.x | 现代化设计、完整组件、Vue 3生态       |
+| **状态管理**   | Pinia             | 2.1.x  | Vue官方推荐、TypeScript友好、轻量级   |
+| **路由管理**   | Vue Router        | 4.3.x  | Vue生态官方路由、支持History模式      |
+| **HTTP客户端** | Axios             | 1.6.x  | 功能完善、拦截器支持、浏览器兼容性好  |
+| **样式方案**   | Sass + Tailwind   | 最新   | 预处理能力强、原子化CSS、响应式设计   |
+| **图表库**     | ECharts           | 5.5.x  | 功能强大、配置灵活、数据可视化能力    |
+| **图标库**     | @vicons/ionicons5 | 最新   | Vue友好、与Naive-UI `NIcon`配合良好   |
 
 ### 3.2 代码规范与标准
 
@@ -1570,3 +1570,45 @@ export const errorHandler = new ErrorHandler();
 - **TypeScript文档**: [TypeScript](https://www.typescriptlang.org/)
 - **Vite文档**: [Vite](https://vitejs.dev/)
 - **Pinia文档**: [Pinia](https://pinia.vuejs.org/)
+
+### 4.x 已接入页面与路由
+
+- `Dashboard` 仪表盘：接入后端统计与图表（用户增长、课程分布、最近活动）
+- `DataOverview` 数据总览：用户/课程/考勤/作业分页列表与筛选
+- `UserManagement` 用户管理：分页查询、创建/编辑、删除、状态切换
+- `CourseManagement` 课程管理：分页查询、创建/编辑、占位模块（教师/班级/课程安排）
+- `AttendanceManagement`、`HomeworkManagement`、`NotificationManagement`：列表占位与后续对接
+- `System/RoleManagement`、`System/PermissionManagement`：开发中占位页，说明后续功能
+- `Profile`、`Password`：个人中心与修改密码占位页，说明开发中
+
+路由结构调整：父路由 `/system` 使用容器组件，子路由使用相对路径 `roles`、`permissions`，避免嵌套路由渲染问题。
+
+### 4.x 请求层与代理
+
+- 前端统一以 `'/api'` 为 `baseURL`，通过 Vite 代理转发到后端（开发环境）：
+  - `vite.config.ts:server.proxy` 将 `'/api'` 指向 `http://localhost:3000`
+- 认证接口路径对齐后端：
+  - 登录：`POST /api/users/login`
+  - 当前用户：`GET /api/users/me`（需 `Authorization: Bearer <token>`）
+- 响应拦截器策略：
+  - 401 仅清理本地 `token`，不强制跳转；由页面逻辑决定后续行为
+  - 统一接受 `2xx` 业务码，非 `2xx` 以错误提示呈现
+
+### 4.x 表格组件与分页规范
+
+- Naive-UI `n-data-table` 的 `row-key` 在当前版本需传入函数；统一封装在中台表格组件：
+  - `BaseTable` 内部将字符串 `rowKey` 解析为函数 `(row) => row[id]`
+- 服务端驱动分页：
+  - 传入 `itemCount`（总条数），绑定事件 `onUpdatePage`、`onUpdatePageSize`
+  - 查询时携带 `page/size` 参数，收到返回后更新 `current/pageSize/total`
+
+### 4.x 搜索组件交互
+
+- `BaseSearch` 通过 `update:model` 事件向父组件同步表单值；页面必须监听并合并：
+  - `@update:model="onUpdateSearchModel"` → `Object.assign(searchModel, m)`
+- 支持 `input/select/date/daterange` 等类型，重置时清空并回调 `reset`
+
+### 4.x 图标与响应式
+
+- 避免将组件对象放入响应式数据结构造成性能警告：
+  - 对 `@vicons/ionicons5` 组件在卡片配置中使用 `markRaw(IconComponent)`
