docs(database): 更新数据库基础设施与迁移使用文档
添加新的数据库基础设施与迁移使用指南文档
更新后端设计文档中的数据库配置说明
修改数据库设计文档中的默认端口和迁移流程
更新后端初始化指南中的数据库相关操作说明

--- a/docs/src/backend/后端设计文档.md
+++ b/docs/src/backend/后端设计文档.md
@@ -1887,9 +1887,10 @@ CMD ["node", "dist/app.js"]
 
 #### 9.1.2 Docker Compose配置
 
+> 说明：生产环境推荐将数据库与 Redis 放入 `infra/database` 独立 compose；后端容器可与其叠加运行，通过服务名访问 `postgres`/`redis`（如 `DB_HOST=postgres`）。下列示例用于说明整体编排结构。
+
 ```yaml
-# docker-compose.yml
-version: '3.8'
+# docker-compose.yml（示例）
 
 services:
   backend:
