--- a/docs/src/backend/后端项目初始化指南.md
+++ b/docs/src/backend/后端项目初始化指南.md
@@ -376,6 +376,8 @@ if %errorlevel% equ 0 (
 
 ## 4. Docker 环境配置
 
+> 更新说明：数据库与 Redis 的容器化管理已由 `infra/database` 子项目统一接管；迁移与种子数据由 `packages/db-schema` 统一提供 CLI。以下章节在保留历史指引的同时，新增基于 `infra/database` 与 `db-schema` 的推荐流程与命令。
+
 ### 4.1 Docker 安装检测
 
 #### 4.1.1 macOS Docker 安装检测
@@ -599,6 +601,24 @@ if not exist "apps\backend\.env" (
 
 ### 5.2 Docker Compose 配置
 
+推荐（新）使用 `infra/database` 独立编排方式：
+
+```bash
+docker compose -f infra/database/docker-compose.db.yml --env-file infra/database/.env.db up -d postgres redis
+docker compose -f infra/database/docker-compose.db.yml ps
+```
+
+健康检查：
+
+```bash
+docker compose -f infra/database/docker-compose.db.yml exec -T postgres pg_isready -U postgres
+```
+
+端口冲突解决：
+
+- 停止旧栈：`docker compose down`
+- 或调整 `infra/database/.env.db` 中的 `DB_PORT_HOST`/`REDIS_PORT_HOST`
+
 #### 5.2.1 macOS 和 Linux Docker Compose 配置
 
 ```bash
@@ -713,6 +733,19 @@ if not exist "docker-compose.yml" (
 
 ### 5.3 服务启动与健康检查
 
+推荐（新）使用 `infra/database/scripts/init_*.sh/.bat` 一键启动与初始化：
+
+```bash
+# macOS
+bash infra/database/scripts/init_mac.sh
+
+# Linux
+bash infra/database/scripts/init_linux.sh
+
+# Windows
+infra\\database\\scripts\\init_windows.bat
+```
+
 #### 5.3.1 数据库服务启动 (macOS 和 Linux)
 
 ```bash
@@ -812,6 +845,18 @@ docker-compose exec -T postgres psql -U postgres -c "CREATE DATABASE csisp OWNER
 
 ### 6.2 数据库迁移执行
 
+替代方案（新，统一使用 `packages/db-schema`）：
+
+```bash
+# 在仓库根按包名过滤执行
+pnpm --filter @csisp/db-schema run migrate
+
+# 或在包目录执行
+(cd packages/db-schema && pnpm run migrate)
+```
+
+环境变量（可从 `infra/database/.env.db` 注入）：`DB_HOST`、`DB_PORT`、`DB_USER`、`DB_PASSWORD`、`DB_NAME`。
+
 #### 6.2.1 macOS 和 Linux 数据库迁移
 
 ```bash
@@ -892,6 +937,16 @@ if not exist "apps\backend\uploads\homework" mkdir apps\backend\uploads\homework
 
 ### 8.1 种子数据初始化
 
+替代方案（新，统一使用 `packages/db-schema`）：
+
+```bash
+# 在仓库根按包名过滤执行
+pnpm --filter @csisp/db-schema run seed
+
+# 或在包目录执行
+(cd packages/db-schema && pnpm run seed)
+```
+
 #### 8.1.1 macOS 和 Linux 种子数据初始化
 
 ```bash
@@ -944,8 +999,8 @@ call :log_success "CLI 种子数据执行完成"
 ```bash
 # 显示服务状态
 log_info "\n📊 服务状态检查:"
-POSTGRES_STATUS=$(docker-compose ps postgres | grep -o 'Up' || echo 'Down')
-REDIS_STATUS=$(docker-compose ps redis | grep -o 'Up' || echo 'Down')
+POSTGRES_STATUS=$(docker compose -f infra/database/docker-compose.db.yml ps postgres | grep -o 'Up' || echo 'Down')
+REDIS_STATUS=$(docker compose -f infra/database/docker-compose.db.yml ps redis | grep -o 'Up' || echo 'Down')
 
 # 状态输出...
 
