--- a/docs/src/database/数据库设计文档.md
+++ b/docs/src/database/数据库设计文档.md
@@ -648,7 +648,7 @@ export const sequelize = new Sequelize(
   process.env.DB_PASSWORD || 'password',
   {
     host: process.env.DB_HOST || 'localhost',
-    port: parseInt(process.env.DB_PORT || '5432'),
+    port: parseInt(process.env.DB_PORT || '5433'),
     dialect: 'postgres',
     pool: {
       max: 20, // 最大连接数
@@ -660,6 +660,8 @@ export const sequelize = new Sequelize(
 );
 ```
 
+> 说明：后端现为“环境变量优先”，默认端口为 5433（宿主机映射至容器 5432）；当在容器网络内访问时可使用服务名与容器内端口（如 `postgres:5432`）。
+
 ### 8.3 性能监控
 
 - 使用PostgreSQL的`pg_stat_statements`插件监控查询性能
@@ -669,6 +671,26 @@ export const sequelize = new Sequelize(
 ---
 
 ## 9. ORM建模与代码生成
+
+### 9.0 迁移与种子统一管理（db-schema 包）
+
+迁移执行（推荐）：
+
+```bash
+pnpm --filter @csisp/db-schema run migrate
+# 或在包目录执行：
+(cd packages/db-schema && pnpm run migrate)
+```
+
+种子执行（推荐）：
+
+```bash
+pnpm --filter @csisp/db-schema run seed
+# 或在包目录执行：
+(cd packages/db-schema && pnpm run seed)
+```
+
+db-schema 包内包含 `/.sequelizerc` 与 `sequelize-config.cjs`，用于兼容 `sequelize-cli` 的加载方式（CLI 以 CommonJS 读取配置）；后端不再直接持有迁移与种子目录。
 
 ### 9.1 Sequelize CLI初始化
 
