docs: 更新文档链接路径并简化package.json脚本
ci: 添加文档部署的GitHub Actions工作流

--- a/docs/src/frontend/前端中台设计文档.md
+++ b/docs/src/frontend/前端中台设计文档.md
@@ -1557,11 +1557,11 @@ export const errorHandler = new ErrorHandler();
 
 ### B. 相关文档链接
 
-- [CSISP业务文档](./business/业务文档.md)
-- [CSISP总体架构设计文档](./architecture/总体架构设计文档.md)
-- [CSISP技术架构设计文档](./architecture/技术架构设计文档.md)
-- [CSISP后端设计文档](./backend/后端设计文档.md)
-- [CSISP数据库设计文档](./database/数据库设计文档.md)
+- [CSISP业务文档](/src/business/业务文档)
+- [CSISP总体架构设计文档](/src/architecture/总体架构设计文档)
+- [CSISP技术架构设计文档](/src/architecture/技术架构设计文档)
+- [CSISP后端设计文档](/src/backend/后端设计文档)
+- [CSISP数据库设计文档](/src/database/数据库设计文档)
 
 ### C. 开发资源
 
