feat: 统一环境变量管理与文档更新
- 新增 .env 示例文件用于各环境配置
- 将数据库配置从独立 .env.db 迁移至根 .env
- 更新初始化脚本以使用统一环境变量源
- 添加 GitHub Actions 工作流用于同步环境变量
- 重构应用启动逻辑以支持多环境变量文件加载
- 更新相关文档反映环境变量管理变更

--- a/docs/src/backend/后端项目初始化指南.md
+++ b/docs/src/backend/后端项目初始化指南.md
@@ -601,10 +601,10 @@ if not exist "apps\backend\.env" (
 
 ### 5.2 Docker Compose 配置
 
-推荐（新）使用 `infra/database` 独立编排方式：
+推荐使用 `infra/database` 独立编排方式（统一从根 `.env` 加载）：
 
 ```bash
-docker compose -f infra/database/docker-compose.db.yml --env-file infra/database/.env.db up -d postgres redis
+docker compose -f infra/database/docker-compose.db.yml --env-file .env up -d postgres redis
 docker compose -f infra/database/docker-compose.db.yml ps
 ```
 
@@ -616,8 +616,8 @@ docker compose -f infra/database/docker-compose.db.yml exec -T postgres pg_isrea
 
 端口冲突解决：
 
-- 停止旧栈：`docker compose down`
-- 或调整 `infra/database/.env.db` 中的 `DB_PORT_HOST`/`REDIS_PORT_HOST`
+- 停止旧栈：`docker compose -f infra/database/docker-compose.db.yml down`
+- 或调整根 `.env` 中 `DB_PORT`/`REDIS_PORT`
 
 #### 5.2.1 macOS 和 Linux Docker Compose 配置
 
@@ -733,7 +733,7 @@ if not exist "docker-compose.yml" (
 
 ### 5.3 服务启动与健康检查
 
-推荐（新）使用 `infra/database/scripts/init_*.sh/.bat` 一键启动与初始化：
+推荐（新）使用 `infra/database/scripts/init_*.sh/.bat` 一键启动与初始化（脚本已从根 `.env` 加载 POSTGRES\_\* 与端口变量）：
 
 ```bash
 # macOS
@@ -855,7 +855,8 @@ pnpm --filter @csisp/db-schema run migrate
 (cd packages/db-schema && pnpm run migrate)
 ```
 
-环境变量（可从 `infra/database/.env.db` 注入）：`DB_HOST`、`DB_PORT`、`DB_USER`、`DB_PASSWORD`、`DB_NAME`。
+环境变量（来自根 `.env`）：
+`DB_HOST`、`DB_PORT`、`DB_USER`、`DB_PASSWORD`、`DB_NAME`（应用连接）；`POSTGRES_DB`、`POSTGRES_USER`、`POSTGRES_PASSWORD`（容器初始化）。
 
 #### 6.2.1 macOS 和 Linux 数据库迁移
 
