chore: 更新项目配置与文档
- 删除无用的 docker-compose.yml 和环境变量示例文件
- 更新 .gitignore 规则，优化 IDE 配置文件的处理
- 同步 pnpm 版本至 10.22.0，并更新相关初始化脚本
- 为各子项目添加统一的格式化脚本
- 新增 .trae 项目规则文档
- 新增跨平台环境初始化脚本
- 更新 README 文档，补充环境要求和常见问题

--- a/docs/src/backend/后端项目初始化指南.md
+++ b/docs/src/backend/后端项目初始化指南.md
@@ -305,8 +305,8 @@ if "!NODE_VERSION:~0,4!"=="v22." (
 #### 3.3.1 macOS 和 Linux pnpm 版本控制
 
 ```bash
-# 检查并安装 pnpm (版本 8.15.0)
-PNPM_REQUIRED_VERSION="8.15.0"
+# 检查并安装 pnpm (版本 10.22.0)
+PNPM_REQUIRED_VERSION="10.22.0"
 log_info "检查 pnpm 安装状态..."
 
 if command -v pnpm &> /dev/null; then
@@ -330,8 +330,8 @@ fi
 #### 3.3.2 Windows pnpm 版本控制
 
 ```batch
-:: 检查并安装 pnpm (版本 8.15.0)
-set "PNPM_REQUIRED_VERSION=8.15.0"
+:: 检查并安装 pnpm (版本 10.22.0)
+set "PNPM_REQUIRED_VERSION=10.22.0"
 call :log_info "检查 pnpm 安装状态..."
 
 pnpm --version >nul 2>&1
@@ -369,7 +369,7 @@ if %errorlevel% equ 0 (
 
 **设计目的**：
 
-- 在所有平台上精确控制 pnpm 版本为 8.15.0，确保与项目依赖完全兼容
+- 在所有平台上精确控制 pnpm 版本为 10.22.0，对齐根 `package.json` 的 `packageManager` 字段，确保与项目依赖完全兼容
 - 提供多级安装和更新机制，增强脚本的健壮性
 - 在安装失败时提供明确的错误提示和手动安装指南
 - 所有脚本在成功安装后会显示确认信息，让用户了解当前安装的版本
